[fix] left align checkboxes

--- a/src/scss/collection.scss
+++ b/src/scss/collection.scss
@@ -131,6 +131,7 @@
     .centeredCheckBox {
       margin: 0 auto;
       width: 43%;
+      text-align: left;
     }
 
     .setBox {
